# CTS_Pixiq

./: .gitignore  CLAUDE.md  README.md  deployment_sh.md  gemini-review.md  mkdocs.yml  pyproject.toml
.dvc/: config
deploy/: config.template.json
deploy/nginx/: sieger.conf
deploy/systemd/: sieger-api.service  sieger-inspection.service
docs/: 00_index.md  01_system_overview.md  02_architecture.md  03_plc_communication.md  04_camera_capture.md  05_inspection_pipeline.md  06_tube_pattern.md  07_stain_detection.md  08_uv_inspection.md  09_tail_inspection.md  10_rest_api.md  11_socketio_service.md  12_teaching.md  13_configuration.md  14_deployment.md  15_logging.md  16_testing.md  17_pixiq_setup.md  CHANGELOG.md  api_reference.md  frontend_hmi_reference.md  frontend_v3_guide.md  index.md  plc-update.md  project_context.md  pypylon_api_reference.md
docs/diagrams/: inspection_sequence.mmd  pixiq_network.mmd  system_block_diagram.mmd
models/patchcore/weights/torch/: model.pt.dvc
scripts/: bootstrap.sh  deploy.sh  export_tensorrt.py  system_setup.sh
scripts/deployment/: rollback.sh
src/: init_app.py  logging_config.py  pipeline.py
src/api/: __init__.py  auth_router.py  main.py  models.py
src/auth/: __init__.py  service.py
src/camera/: __init__.py  camera.py  capture.py  data_types.py
src/cloud/: uploader.py
src/db/: schema.py  writer.py
src/inspection/: __init__.py  data_types.py  dimension_check.py  polar_unwarp.py  recipe_store.py  stain_detector.py  tail_inspection.py  tube_pattern.py  uv_inspection.py  visible.py  visualization.py  yolo_detector.py
src/inspection/color_matching/: bhattacharyya_distance.py  bilateral_filter.py  convert_lab.py  crop_sweet_spot.py  entropy_2d.py  find_object.py  find_radius.py  get_signature.py  histogram_2d.py  hsv_histogram.py  match_pattern.py  mean_lightness.py  normalize_histogram.py  preprocess_pipeline.py  unrolled.py
src/plc/: __init__.py  client.py  data_types.py  mock_plc_client.py
src/services/: __init__.py  inspection_service.py  mock_inspection_service.py
src/teaching/: __init__.py  api.py  tube_teacher.py
testing/: test_dimension.py  test_dimension_check.py  test_stain.py  test_tail.py  test_uv.py
training/patchcore/: evaluate.py  evaluate_stains.py  prepare_dataset.py  score_spread.py  train.py  unwarp.py
training/patchcore_uv/: clean_dark_frames.py  evaluate.py  prepare_dataset.py  prepare_dataset_annular.py  split_and_train.py  train.py  visualize_heatmaps.py
weights/: tail_yolo.pt.dvc  uv_yolo.pt.dvc  visible_yolo.pt.dvc  yarn_tail_v2.pt.dvc  yarn_tail_v3.pt.dvc
